--- a/KuntagmlLoader/resources.qrc
+++ b/KuntagmlLoader/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/plugins/KuntagmlLoader">
-        <file>icon.png</file>
+        <file>resources/icons/icon.png</file>
     </qresource>
 </RCC>
